# ply_reader

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yaml
include/: ply_reader.hpp
src/: ply_reader.cpp  ply_reader_pybind.cpp
tests/: test_ply_reader.py
