[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "ply-reader"
version = "0.1.0"
description = "Python bindings for PLYReader class"
readme = "README.md"
authors = [
    { name = "Tomas Jurov", email = "tomas.jurov@gmail.com" },
]
requires-python = ">=3.7"
keywords = ["pybind11", "C++", "Python", "PLY"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = false
cmake.minimum-version = "3.16"

[tool.cibuildwheel]
archs = ["auto64"]
skip = ["*-musllinux*", "pp*", "cp36-*"]

[tool.cibuildwheel.macos]
environment = "MACOSX_DEPLOYMENT_TARGET=10.14"
archs = ["auto64", "arm64"]

[tool.pytest.ini_options]
testpaths = ['tests']
